--- a/OpeningPage.html
+++ b/OpeningPage.html
@@ -1,4 +1,5 @@
-<head>
+<html>
+  <head>
   <center>
     <title>What workout day is today?</title>
   </center>
@@ -32,3 +33,5 @@
     </table>
   </center>
 </body>
+</html>
+
