--- a/OpeningPage.html
+++ b/OpeningPage.html
@@ -3,6 +3,7 @@
     <center>
       <title>What workout day is today?</title>
     </center>
+    <link rel = "stylesheet" href = "Style.css">
   </head>
   <body>
     <center>
