--- a/Monday.html
+++ b/Monday.html
@@ -9,7 +9,8 @@
           <th> Exercises </th>
         </tr>
         <tr>
-          <td></td>
+          <td> Pushups - 10 sets, 10 reps </td>
+          <td> Dumbell Curles - 5 sets, 10 reps </td>
         </tr>
       </table>
     </center>
