--- a/OpeningPage.html
+++ b/OpeningPage.html
@@ -3,17 +3,22 @@
     <center>
       <title>What workout day is today?</title>
     </center>
+    <style>
+      .TextColor{
+        color: white;
+      }
+    </style>
     <link rel = "stylesheet" href = "Style.css">
   </head>
-  <body>
+  <body style = "background-color: black;">
     <center>
-      <h1> What day is today? </h2>
+      <h1 class="TextColor"> What day is today? </h2>
     </center>
     <center>
-      <table border ="2">
+      <table class="TextColor" border ="2">
         <tr>
-          <th> Day </th>
-          <th> Workout Plan </th>
+          <th class="TextColor"> Day </th>
+          <th class="TextColor"> Workout Plan </th>
         </tr>
         <tr>
           <td> Monday </td>
