--- a/Monday.html
+++ b/Monday.html
@@ -1,6 +1,8 @@
 <html>
   <head>
-    <title> Workout for Monday </title>
+    <center>
+      <title> Workout for Monday </title>
+    </center>
   </head>
   <body>
     <center>
