--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </tr>
         <tr>
           <td> Monday </td>
+          <td><a href = "https://futureprogrammerfrfr.github.io/WorkoutForToday.github.io/Monday.html"> Monday's Workout </a></td>
         </tr>
       </table>
     </center>
