--- a/Monday.html
+++ b/Monday.html
@@ -11,8 +11,10 @@
           <th> Exercises </th>
         </tr>
         <tr>
-          <td> Pushups - 10 sets, 10 reps </td>
-          <td> Dumbell Curles - 5 sets, 10 reps </td>
+          <td> Pushups - 10 sets, 10 reps 
+          Bicep Curles - 5 sets, 10 reps
+          Pull ups - 4 sets, 5 reps
+          Bench Press - ideal weight, 3 sets, 15 reps</td>
         </tr>
       </table>
     </center>
