--- a/Monday.html
+++ b/Monday.html
@@ -3,15 +3,21 @@
     <center>
       <title> Workout for Monday </title>
     </center>
+    <style>
+      .white{
+        color: white;
+      }
+    </style>
+    <link rel = "stylesheet" href = "Style.css">
   </head>
-  <body>
+  <body style = "background-color: black;">
     <center>
-      <table border = "1">
+      <table class="white" border = "1">
         <tr>
-          <th> Exercises </th>
+          <th class="white"> Exercises </th>
         </tr>
         <tr>
-          <td> Pushups - 10 sets, 10 reps 
+          <td class="white"> Pushups - 10 sets, 10 reps 
           Bicep Curles - 5 sets, 10 reps
           Pull ups - 4 sets, 5 reps
           Bench Press - ideal weight, 3 sets, 15 reps</td>
