--- a/Tuesday.html
+++ b/Tuesday.html
@@ -1,1 +1,25 @@
-
+<html>
+  <head>
+    <center>
+      <title> Workout for Monday </title>
+    </center>
+    <style>
+      .white{
+        color: white;
+      }
+    </style>
+    <link rel = "stylesheet" href = "Style.css">
+  </head>
+  <body style = "background-color: black;">
+    <center>
+      <table class="white" border = "1">
+        <tr>
+          <th class="white"> Exercises </th>
+        </tr>
+        <tr>
+          <td>Exercises TBD</td>
+        </tr>
+      </table>
+    </center>
+  </body>
+</html>
