--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <tr>
           <td> Monday </td>
           <td><a href = "https://futureprogrammerfrfr.github.io/WorkoutForToday.github.io/Monday.html"> Monday's Workout </a></td>
+          <td> Tuesday </td>
+          <td><a href = "https://futureprogrammerfrfr.github.io/WorkoutForToday.github.io/Tuesday.html"> Tuesday's Workout </a></td>
+          <td> Wednesday </td>
+          <td><a href = "https://futureprogrammerfrfr.github.io/WorkoutForToday.github.io/Tuesday.html"> Tuesday's Workout </a></td>
         </tr>
       </table>
     </center>
