--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
           <td> Tuesday </td>
           <td><a href = "https://futureprogrammerfrfr.github.io/WorkoutForToday.github.io/Tuesday.html"> Tuesday's Workout </a></td>
           <td> Wednesday </td>
-          <td><a href = "https://futureprogrammerfrfr.github.io/WorkoutForToday.github.io/Tuesday.html"> Tuesday's Workout </a></td>
+          <td><a href = "https://futureprogrammerfrfr.github.io/WorkoutForToday.github.io/Wednesday.html"> Tuesday's Workout </a></td>
+          <td> Thursday </td>
+          <td><a href = "https://futureprogrammerfrfr.github.io/WorkoutForToday.github.io/Thursday.html"> Tuesday's Workout </a></td>
+          <td> Friday </td>
+          <td><a href = "https://futureprogrammerfrfr.github.io/WorkoutForToday.github.io/Friday.html"> Tuesday's Workout </a></td>
+          <td> Saturday </td>
+          <td><a href = "https://futureprogrammerfrfr.github.io/WorkoutForToday.github.io/Saturday.html"> Tuesday's Workout </a></td>
+          <td> Sunday </td>
+          <td><a href = "https://futureprogrammerfrfr.github.io/WorkoutForToday.github.io/Sunday.html"> Tuesday's Workout </a></td>
         </tr>
       </table>
     </center>
