--- a/Monday.html
+++ b/Monday.html
@@ -17,7 +17,7 @@
           <th class="white"> Exercises </th>
         </tr>
         <tr>
-          <td class="white"> Pushups - 10 sets, 10 reps 
+          <td class="white" colspan = "2"> Pushups - 10 sets, 10 reps 
           Bicep Curles - 5 sets, 10 reps
           Pull ups - 4 sets, 5 reps
           Bench Press - ideal weight, 3 sets, 15 reps</td>
