--- a/Monday.html
+++ b/Monday.html
@@ -22,6 +22,12 @@
         <tr>
           <td class="white" colspan = "1"> Bicep Curles - 5 sets, 10 reps </td>
         </tr>
+        <tr>
+          <td class ="white" colspan = "1"> Pull ups - 4 sets, 5 reps </td>
+        </tr>
+        <tr>
+          <td class="white" colspan = "1"> Bench Press, Optimal weight, 15 reps, 3 sets </td>
+        </tr>
       </table>
     </center>
   </body>
