--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+.center-screen {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh;
+}
 <html>
   <head>
     <center>
@@ -11,6 +19,7 @@
     <link rel = "stylesheet" href = "Style.css">
   </head>
   <body style = "background-color: black;">
+    <div class="center-screen">
     <center>
       <h1 class="TextColor"> What day is today? </h2>
     </center>
@@ -50,6 +59,7 @@
         </tr>
       </table>
     </center>
+    </div>
   </body>
 </html>
 results-receiver.actions.githubusercontent.com
