--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
       .TextColor{
         color: white;
       }
+      .FontSize{
+        font-size: 25px
+      }
+      .TitleSize{
+        font-size: 35px
+      }
     </style>
     <link rel = "stylesheet" href = "Style.css">
   </head>
@@ -26,8 +32,8 @@
     <center>
       <table class="TextColor" border ="2">
         <tr>
-          <th class="TextColor"> Day </th>
-          <th class="TextColor"> Workout Plan </th>
+          <th class="TextColor TitleSize"> Day </th>
+          <th class="TextColor TitleSize"> Workout Plan </th>
         </tr>
         <tr>
           <td> Monday </td>
