--- a/index.html
+++ b/index.html
@@ -36,32 +36,32 @@
           <th class="TextColor TitleSize"> Workout Plan </th>
         </tr>
         <tr>
-          <td> Monday </td>
-          <td><a href = "https://futureprogrammerfrfr.github.io/WorkoutForToday.github.io/Monday.html"> Monday's Workout </a></td>
+          <td class = "FontSize"> Monday </td>
+          <td class = "FontSize"><a href = "https://futureprogrammerfrfr.github.io/WorkoutForToday.github.io/Monday.html"> Monday's Workout </a></td>
         </tr>
         <tr>
-          <td> Tuesday </td>
-          <td><a href = "https://futureprogrammerfrfr.github.io/WorkoutForToday.github.io/Tuesday.html"> Tuesday's Workout </a></td>
+          <td class = "FontSize"> Tuesday </td>
+          <td class = "FontSize"><a href = "https://futureprogrammerfrfr.github.io/WorkoutForToday.github.io/Tuesday.html"> Tuesday's Workout </a></td>
         </tr>
         <tr>
-          <td> Wednesday </td>
-          <td><a href = "https://futureprogrammerfrfr.github.io/WorkoutForToday.github.io/Wednesday.html"> Wednesday's Workout </a></td>
+          <td class = "FontSize"> Wednesday </td>
+          <td class = "FontSize"><a href = "https://futureprogrammerfrfr.github.io/WorkoutForToday.github.io/Wednesday.html"> Wednesday's Workout </a></td>
         </tr>
         <tr>
-          <td> Thursday </td>
-          <td><a href = "https://futureprogrammerfrfr.github.io/WorkoutForToday.github.io/Thursday.html"> Thursday's Workout </a></td>
+          <td class = "FontSize"> Thursday </td>
+          <td class = "FontSize"><a href = "https://futureprogrammerfrfr.github.io/WorkoutForToday.github.io/Thursday.html"> Thursday's Workout </a></td>
         </tr>
         <tr>
-          <td> Friday </td>
-          <td><a href = "https://futureprogrammerfrfr.github.io/WorkoutForToday.github.io/Friday.html"> Friday's Workout </a></td>
+          <td class = "FontSize"> Friday </td>
+          <td class = "FontSize"><a href = "https://futureprogrammerfrfr.github.io/WorkoutForToday.github.io/Friday.html"> Friday's Workout </a></td>
         </tr>
         <tr>
-          <td> Saturday </td>
-          <td><a href = "https://futureprogrammerfrfr.github.io/WorkoutForToday.github.io/Saturday.html"> Saturday's Workout </a></td>
+          <td class = "FontSize"> Saturday </td>
+          <td class = "FontSize"><a href = "https://futureprogrammerfrfr.github.io/WorkoutForToday.github.io/Saturday.html"> Saturday's Workout </a></td>
         </tr>
         <tr>
-          <td> Sunday </td>
-          <td><a href = "https://futureprogrammerfrfr.github.io/WorkoutForToday.github.io/Sunday.html"> Sunday's Workout </a></td>
+          <td class = "FontSize"> Sunday </td>
+          <td class = "FontSize"><a href = "https://futureprogrammerfrfr.github.io/WorkoutForToday.github.io/Sunday.html"> Sunday's Workout </a></td>
         </tr>
       </table>
     </center>
