--- a/Monday.html
+++ b/Monday.html
@@ -7,6 +7,12 @@
       .white{
         color: white;
       }
+      .TitleSize{
+        font-size: 35px
+      }
+      .FontSize{
+        font-size: 25px
+      }
     </style>
     <link rel = "stylesheet" href = "Style.css">
   </head>
@@ -14,19 +20,19 @@
     <center>
       <table class="white" border = "1">
         <tr>
-          <th class="white"> Exercises </th>
+          <th class="white TitleSize"> Exercises </th>
         </tr>
         <tr>
-          <td class="white" colspan = "1"> Pushups - 10 sets, 10 reps </td>
+          <td class="white FontSize" colspan = "1"> Pushups - 10 sets, 10 reps </td>
         </tr>
         <tr>
-          <td class="white" colspan = "1"> Bicep Curles - 5 sets, 10 reps </td>
+          <td class="white FontSize" colspan = "1"> Bicep Curles - 5 sets, 10 reps </td>
         </tr>
         <tr>
-          <td class ="white" colspan = "1"> Pull ups - 4 sets, 5 reps </td>
+          <td class ="white FontSize" colspan = "1"> Pull ups - 4 sets, 5 reps </td>
         </tr>
         <tr>
-          <td class="white" colspan = "1"> Bench Press, Optimal weight, 15 reps, 3 sets </td>
+          <td class="white FontSize" colspan = "1"> Bench Press, Optimal weight, 15 reps, 3 sets </td>
         </tr>
       </table>
     </center>
