--- a/Sunday.html
+++ b/Sunday.html
@@ -7,6 +7,12 @@
       .white{
         color: white;
       }
+      .TitleSize{
+        font-size: 35px
+      }
+      .FontSize{
+        font-size: 25px
+      }
     </style>
     <link rel = "stylesheet" href = "Style.css">
   </head>
@@ -14,10 +20,10 @@
     <center>
       <table class="white" border = "1">
         <tr>
-          <th class="white"> Exercises </th>
+          <th class="white TitleSize"> Exercises </th>
         </tr>
         <tr>
-          <td>Exercises TBD</td>
+          <td class = "FontSize">Exercises TBD</td>
         </tr>
       </table>
     </center>
